--- a/style.css
+++ b/style.css
@@ -12,9 +12,6 @@
 body {
     font-family: 'Open Sans', sans-serif;
     color: var(--primaryText);
-    max-width: 1520px;
-    margin: 0 auto;
-    padding: 0 1rem;
 }
 
 
@@ -23,9 +20,15 @@ header {
     position: sticky;
     top: 0;
     background-color: #fff;
+    z-index: 1;
+}
+
+.header-container {
+    max-width: 1520px;
+    margin: 0 auto;
     display: flex;
     justify-content: space-between;
-    padding: 0.5rem 0;
+    padding: 0.5rem 1rem;
 }
 
 header #logo {
@@ -46,8 +49,7 @@ header #logo {
     display: flex;
     justify-content: space-between;
     list-style-type: none;
-    min-width: 9rem;
-    max-width: 25rem;
+    min-width: 9.5rem;
 }
 
 #navbar li:first-child {
@@ -61,9 +63,21 @@ header #logo {
 }
 
 
+/* Main */
+main {
+    max-width: 1520px;
+    margin: 0 auto;
+    padding: 0 1rem;
+}
+
+
 /* Welcome-section */
 #welcome-section {
-    height: 94vh;
+    height: 100vh;
+}
+
+.welcome-container {
+    height: 85%;
     display: grid;
     align-content: space-around;
 }
@@ -78,7 +92,7 @@ header #logo {
     font-weight: 400;
     font-size: 2.8rem;
     justify-content: space-between;
-    margin: 2rem 0;
+    margin-bottom: 2rem;
 }
 
 #welcome-section h1 span {
@@ -118,7 +132,14 @@ header #logo {
 }
 
 #welcome-section #scrolldown {
-    margin: 1rem auto;
+    padding-bottom: 1rem;
+    display: block;
+    width: 100%;
+}
+
+#welcome-section #scrolldown svg {
+    margin: 0 auto;
+    display: block;
 }
 
 
@@ -128,7 +149,7 @@ header #logo {
     display: block; 
     content: " "; 
     margin-top: -4rem; 
-    height: 6rem; 
+    height: 4rem; 
     visibility: hidden; 
     pointer-events: none;
 }
@@ -138,13 +159,14 @@ h2 {
     font-weight: 400;
 }
 
-#projects a {
+#projects .tile-container a {
     text-decoration: none;
+    max-width: 450px;
 }
 
 #projects .project-tile {
     padding: 1rem;
-    margin: 2rem 0;
+    margin: 2rem 0 3rem 0;
     border-radius: 20px;
     max-width: 450px;
 }
@@ -174,6 +196,10 @@ h2 {
 
 
 /* Contact */
+#contact {
+    margin-bottom: 3rem;
+}
+
 #contact h2 {
     margin: 4rem 0 2rem 0;
 }
@@ -188,6 +214,130 @@ h2 {
 #contact a {
     color: var(--primaryText);
     text-decoration: none;
-    font-size: 1.2rem;
+    font-size: 1.3rem;
+}
+
+#contact .svg-cont {
+    display: flex;
+}
+
+
+/* Media Queries */
+@media screen and (min-width: 600px) {
+    body {
+        padding: 0 2rem;
+    }
+
+    header #logo {
+        font-size: 2.25rem;
+    }
+
+    #navbar ul {
+        column-gap: 2.5rem;
+    }
+
+    #navbar a {
+        font-size: 1.9rem;
+    }
+
+    #welcome-section h1{
+        font-size: 4rem;
+    }
+    
+    #welcome-section h1 span {
+        display: inline;
+    }
+
+    #welcome-section .btn {
+        font-size: 2.25rem;
+        width: 11rem;
+        border-radius: 2rem;
+    }
+
+    h2 {
+        font-size: 3rem;
+    }
+
+    #projects::before {
+        height: 5rem; 
+    }
+
+    #projects .project-tile {
+        margin: 2rem auto 3rem auto;
+    }
+
+    #projects .project-tile p {
+        font-size: 1.5rem;
+    }
+
+    #contact div {
+        gap: 2rem;
+    }
+
+    #contact a {
+        font-size: 1.9rem;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    #welcome-section h1, #welcome-section .icons {
+        margin-bottom: 3.5rem;
+    }   
+}
+
+@media screen and (min-width: 1025px) {
+    body {
+        overflow-x: hidden;
+    }
+
+    #navbar li:first-child {
+        display: initial;
+    }
+
+    #navbar ul {
+        column-gap: 5rem;
+    }
+
+    .welcome-container {
+        grid-template-columns: 60% 1fr;
+        position: relative;
+        align-content: center;
+    }
+
+    #welcome-section .left {
+        grid-row: 1/2;
+        grid-template-columns: 1/2;
+    }
+
+    #welcome-section h1 {
+        margin-bottom: 3rem;
+    } 
+
+    #circles {
+        position: absolute;
+        right: -8vw;
+        top: 19vh;
+        z-index: -1;
+    }
+
+    #welcome-section #scrolldown {
+        grid-column: 1/3;
+        align-self: end;
+    }
+
+    #projects::before {
+        height: 6rem; 
+    }
+
+    #projects .tile-container {
+        display: grid;
+        grid-template-columns: repeat(3, minmax(250px, auto));
+        justify-content: space-between;
+        gap: 1rem;
+    }
+
+    #projects .project-tile {
+        margin: 3rem 0 3rem 0;
+    }
 }
 
